# birdframe

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
birdframe/: app.py  artist.py  backups.py  compose.py  config.py  detector.py  icon.py  image_client.py  listener.py  menubar.py  narrator.py  publisher.py  reliability.py  rollup.py  runtime.py  scheduler.py  secrets.py  service.py  store.py  styles.py  weather.py
birdframe/web/: app.py
docs/plans/: 2026-07-05-birdframe-design.md  2026-07-05-birdframe-implementation.md  2026-07-14-gemini-image-provider-design.md  2026-07-14-gemini-image-provider.md
packaging/: com.birdframe.plist  install.sh
styles/: acoustic-constellation.md  art-nouveau.md  arts-and-crafts-tapestry.md  bewick-wood-engraving.md  celtic-illuminated-bestiary.md  childrens-book.md  cyanotype-garden.md  dawn-chorus-clock.md  field-guide.md  glasgow-style-panel.md  gongbi-garden-scroll.md  gould-lithograph.md  kacho-e-nocturne.md  linocut.md  mughal-natural-history.md  phenology-almanac.md  scottish-folk.md  soundscape-tapestry.md  thorburn-field-study.md  two-colour-risograph.md  ukiyo-e.md
tests/: test_app_wiring.py  test_artist.py  test_backups.py  test_compose.py  test_config.py  test_detector.py  test_image_client.py  test_listener.py  test_narrator.py  test_publisher.py  test_reliability.py  test_rollup.py  test_runtime.py  test_scheduler.py  test_secrets.py  test_service.py  test_smoke.py  test_store.py  test_styles.py  test_styles_editor.py  test_weather.py  test_web.py
(+14 files in other folders)
