[project]
name = "birdframe"
version = "0.1.0"
description = "Listen to birds in Edinburgh and paint the day's birdlife onto an e-ink frame"
requires-python = ">=3.12,<3.13"
dependencies = [
    "birdnet>=0.1.6",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "pillow>=10.2",
    "openai>=1.30",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "rumps>=0.4.0",
    "keyring>=25.0",
    "tomlkit>=0.12",
    "astral>=3.2",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
birdframe = "birdframe.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["birdframe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
